--- a/src/app/transactions/certification/certificatf/certificatf.component.html
+++ b/src/app/transactions/certification/certificatf/certificatf.component.html
@@ -83,6 +83,14 @@
                                         <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
                                       </svg></button>
                                     </div>
+
+                                    <div class="col-md-2" id="btnsauv">
+                                      <button class="btn" >Sauvegarger</button>
+                                    </div>
+
+                                    <div class="col-md-4" id="btnimp">
+                                      <button class="btn" >Imprimer</button>
+                                    </div>
                                   </div>
                                   </div>
 
@@ -161,7 +169,7 @@
                                         <input type="text" class="form-control form-control-sm" id="inputAdress">
                                       </div>
 
-                                      <div class="col-md-5 ">
+                                      <div  class="col-md-5 ">
                                         <input type="file" class="btn my-4 mx-1">
                                       </div>
 
