--- a/src/app/transactions/certification/certificatf/dialog-pvrdc/dialog-pvrdc.component.html
+++ b/src/app/transactions/certification/certificatf/dialog-pvrdc/dialog-pvrdc.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Déclaration de personnes auditionnées</h1>
+<h1 mat-dialog-title>Déclaration de la personne auditionnée</h1>
 <div mat-dialog-content>
   <div class="card">
     <form class="row g-3 align-items-center my-2 mx-2">
