--- a/src/app/transactions/certification/certificatf/certificatf.component.scss
+++ b/src/app/transactions/certification/certificatf/certificatf.component.scss
@@ -1,5 +1,6 @@
 @import 'src/app/home/home.component.scss';
 
+
 section{
     display: flex;
 }
@@ -48,8 +49,14 @@ section{
    }
 
    mat-stepper{
-    width: 100% !important;
-    
+    //width: 100% !important;
+    margin-bottom: 0;
+    font-size: 0.75rem;
+    color: #fb9101;
+   }
+
+   .stepControl{
+       background-color: #fb9101;
    }
 
    mat-form-field,.matInput{
@@ -141,12 +148,13 @@ section{
      height: 3.75rem;
      
  }
-#btnimp, #btnsauv{
- 
+#btnimp1, #btnsauv1{
+  font-size: 0.5rem;
   height: 0.938rem;
   float:left;
-  margin-top: 20px;
+  margin-top: 27px;
   display:inline;
+  height: 1.75rem;
 }
  #btncmu{
   background-color: #30ae67;
@@ -217,16 +225,32 @@ section{
 .card-header{
   font-size: 14px;
 }
+/* partie 3*/ 
 .btn-suivant3{
   background-color: #fb9101;
   height: 1.5rem;
   color: white;
   margin-left: 50%;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .btn-retour3{
   height: 1.5rem;
   margin-left: -50%;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+
+/* partie 4 */
+
+span,#btnnew4{
+  display: flex;
+  height: 1.85rem;
+  text-justify: auto;
+  
+}
+
+#btn4{
+  //position: relative;
+  margin-right: 7rem;
 }
